--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -97,8 +97,8 @@ a.filled-button:hover {
     margin-bottom: 15px;
 }
 
-.products-heading {
-    background-image: url(../images/products-heading.jpg);
+/* .products-heading {
+    background-image: url(../images/b1.jpeg);
 }
 
 .about-heading {
@@ -107,7 +107,7 @@ a.filled-button:hover {
 
 .contact-heading {
     background-image: url(../images/contact-heading.jpg);
-}
+} */
 
 .page-heading {
     padding: 210px 0px 130px 0px;
